# torch_compile_blogpost

./: README.md  benchmark.py  inductor.py  pyproject.toml
torch_compile_debug/run_2024_09_21_09_28_39_611516-pid_90469/torchinductor/model__0_inference_0.0/: fx_graph_runnable.py  fx_graph_transformed.py  ir_post_fusion.txt  ir_pre_fusion.txt  output_code.py
