[project]
name = "torch-compile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.11.2",
    "numpy>=2.1.1",
    "ruff>=0.6.5",
    "torch>=2.4.1",
    "torchviz>=0.0.2",
]

[tool.pyright]
exclude = [
  ".venv"
]
venvPath = "."
venv = ".venv"
